...
@implementation TransactionsViewController

- (void)viewDidLoad {
    [super viewDidLoad];
    self.view.backgroundColor = [UIColor systemGroupedBackgroundColor];
    
    self.title = @"Transaction";
    NSString *rightButtonTitle = self.isEditMode ? @"Update" : @"Add";
    self.leftButton = [[UIBarButtonItem alloc] initWithTitle:@"Cancel" style:UIBarButtonItemStylePlain target:self action:@selector(leftButtonTapped)];
    self.rightButton = [[UIBarButtonItem alloc] initWithTitle:rightButtonTitle style:UIBarButtonItemStyleDone target:self action:@selector(rightButtonTapped)];
    self.navigationItem.leftBarButtonItem = self.leftButton;
    self.navigationItem.rightBarButtonItem = self.rightButton;
    self.selectedTypeIndex = 3;
    
...
    self.datePicker.datePickerMode = UIDatePickerModeDateAndTime;
    self.datePicker.locale = [NSLocale localeWithLocaleIdentifier:@"en_US"];
    self.categoryPicker = [[UIPickerView alloc] init];
    self.categoryPicker.delegate = self;
    self.categoryPicker.dataSource = self;
    self.amountTextField = [[UITextField alloc] init];
    self.amountTextField.placeholder = @"Enter amount";
    self.amountTextField.keyboardType = UIKeyboardTypeDecimalPad;
    self.amountTextField.delegate = self;
    self.descriptionTextField = [[UITextField alloc] init];
    self.descriptionTextField.placeholder = @"Enter description";
    self.descriptionTextField.delegate = self;
    self.typeValues = @[@"Expense", @"Income"];
    self.typePicker = [[UIPickerView alloc] init];
    self.typePicker.delegate = self;
    self.typePicker.dataSource = self;
}
...
            break;
        }
        case 3: // Budget
        {
            cell.textLabel.text = @"Budget";
            UIButton *typeButton = [UIButton buttonWithType:UIButtonTypeSystem];
            [typeButton setTitle:@"Select Budget" forState:UIControlStateNormal];
            typeButton.translatesAutoresizingMaskIntoConstraints = NO;
            typeButton.tag = 0;
            typeButton.enabled = self.budgets.count == 0 ? NO : YES;
            [typeButton addTarget:self action:@selector(pickerButtonTapped:) forControlEvents:UIControlEventTouchUpInside];
            [cell.contentView addSubview:typeButton];
            
...
            ]];
            break;
        }
        case 5: // Category
            cell.textLabel.text = @"Category";
            UIButton *typeButton = [UIButton buttonWithType:UIButtonTypeSystem];
            [typeButton setTitle:@"Select Category" forState:UIControlStateNormal];
            typeButton.translatesAutoresizingMaskIntoConstraints = NO;
            typeButton.tag = 2;
            typeButton.enabled = self.selectedTypeIndex == 3 ? NO : YES;
            [typeButton addTarget:self action:@selector(pickerButtonTapped:) forControlEvents:UIControlEventTouchUpInside];
            [cell.contentView addSubview:typeButton];
            
...
    picker.dataSource = self;
    picker.delegate = self;
    return picker;
}

- (UIAlertAction *)createDoneActionForPicker:(UIPickerView *)picker sender:(UIButton *)sender context:(NSManagedObjectContext *)context {
    return [UIAlertAction actionWithTitle:@"Done" style:UIAlertActionStyleDefault handler:^(UIAlertAction *action) {
        NSInteger selectedRow = [picker selectedRowInComponent:0];
        NSError *error = nil;
        
        switch (sender.tag) {
            case 0: { // Budget
                NSDictionary *selectedBudget = self.budgets[selectedRow];
...
